Fix CSS Alignment

--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -1,8 +1,3 @@
-body
-{
-	font-family: "Times New Roman", Times, serif;
-}
-
 .control-group{
 	width: 100%;
 	margin-left: 47%;
@@ -70,12 +65,38 @@ textarea
     height: 250px;
 }
 
-#designations, #name, #candidateName{
+#designations, #name{
 	color: black;
-	margin-left:-50%;
+	position:absolute;
+	left:64px;
+	top:70px;
+}
+
+#candidateName{
+	color: black;
+	position:absolute;
+	left:64px;
+	top:70px;
 }
 
 #searchBtn{
-	margin-left:-20%;
-	margin-bottom:25%;
+	position:absolute;
+	top:72px;
+	right:180px;
+
+}
+
+#searcCanhBtn{
+	position:absolute;
+	top:8px;
+	right:175px;
+}
+
+.form-container-mg{
+	/* position:relative; */
+	width:700px;
+	height:50px;
+	border: 1px solid #d6d6d6;
+	background-color: #F0F0F0;
+	border-radius: 12px;
 }
